# unifi-protect-bulk-download

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  unifi-protect-bulk-download.code-workspace
.hive-mind/: config.json  hive.db  memory.db
scripts/: maintain-rust-codex-fast.sh  maintain-rust-codex.sh  setup-rust-codex.sh
src/: api.rs  app_error.rs  main.rs  output_path.rs  parse_args.rs
