[package]
name = "unifi-protect-bulk-download"
version = "0.5.1"
edition = "2021"
homepage = "https://github.com/xlfpx/unifi-protect-bulk-download"
repository = "https://github.com/xlfpx/unifi-protect-bulk-download"
description = "A tool to bulk download videos from a Unifi Protect NVR"
authors = ["Lars Frölich"]
license = "GPL-3.0"


[dependencies]
clap="4.3"
tokio="1.11"
chrono="0.4"
unifi_protect="0.5.2"
sanitize-filename = "0.5.0"

