[package]
name = "unifi-protect-bulk-download"
version = "0.5.2"
edition = "2021"
homepage = "https://github.com/xlfpx/unifi-protect-bulk-download"
repository = "https://github.com/xlfpx/unifi-protect-bulk-download"
description = "A tool to bulk download videos from a Unifi Protect NVR"
authors = ["Lars Frölich"]
license = "GPL-3.0"


[dependencies]
clap = "4"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sanitize-filename = "0.5"
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"

