[package]
name = "unifi-protect-bulk-download"
version = "0.6.0"
edition = "2021"
homepage = "https://github.com/xlfpx/unifi-protect-bulk-download"
repository = "https://github.com/xlfpx/unifi-protect-bulk-download"
description = "A tool to bulk download videos from a Unifi Protect NVR"
authors = ["Lars Frölich"]
license = "GPL-3.0"


[dependencies]
clap={ version = "4.3", features = ["derive"] }
tokio="1.11"
chrono="0.4"
unifi_protect="0.6.0"
sanitize-filename = "0.6.0"
rpassword = "7.3.1"
